--- a/Amoba/Amoba.csproj
+++ b/Amoba/Amoba.csproj
@@ -46,6 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="amobaDes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="amobaDes.Designer.cs">
+      <DependentUpon>amobaDes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fileOperation.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +61,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="amobaDes.resx">
+      <DependentUpon>amobaDes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
