Félig működő fájlbaírás

--- a/Amoba/Amoba.csproj
+++ b/Amoba/Amoba.csproj
@@ -74,6 +74,7 @@
       <DependentUpon>Game.cs</DependentUpon>
     </Compile>
     <Compile Include="GameFuncs.cs" />
+    <Compile Include="IO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="amobaDes.resx">
