--- a/Amoba/Amoba.csproj
+++ b/Amoba/Amoba.csproj
@@ -46,20 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="amobaDes.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="amobaDes.Designer.cs">
-      <DependentUpon>amobaDes.cs</DependentUpon>
-    </Compile>
     <Compile Include="Data.cs" />
     <Compile Include="DisplayFuncs.cs" />
-    <Compile Include="amobaDes.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="amobaDes.Designer.cs">
-      <DependentUpon>amobaDes.cs</DependentUpon>
-    </Compile>
     <Compile Include="fileOperation.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -74,16 +62,22 @@
       <DependentUpon>Game.cs</DependentUpon>
     </Compile>
     <Compile Include="GameFuncs.cs" />
+    <Compile Include="Leiras.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Leiras.Designer.cs">
+      <DependentUpon>Leiras.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="amobaDes.resx">
-      <DependentUpon>amobaDes.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Game.resx">
       <DependentUpon>Game.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Leiras.resx">
+      <DependentUpon>Leiras.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
